--- a/style.css
+++ b/style.css
@@ -5,12 +5,90 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+:root{
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "JosefinSlab", serif;
+    --font-action: "Mulish", serif;
+}
+
+.hamburguer{
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    transition: all 1s;
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px black;
+    transition: all 1s;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.4rem, .4rem);
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.05rem, -.4rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #6a3093;
+    color: #fff;
+    font-family: var(--font-action);
+    opacity: 0;
+    transition: all 1s;
+}
+
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #6a3093;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
+
 }
 
 header{
     width: 100%;
     height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 .img-wrapper{
@@ -46,7 +124,7 @@ header{
     line-height: 3.5rem;
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
     margin-bottom: 2rem;
@@ -57,7 +135,7 @@ header{
 
 
 .banner p{
-    font: "JosefinSlab", serif;
+    font: var(--font-secundary);
     color: #ffffff;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);   
@@ -67,7 +145,7 @@ header{
 }
 
 .banner button{
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     text-transform: uppercase;
     letter-spacing: .1rem;
     color: rgb(255, 255, 255);
@@ -96,3 +174,65 @@ header{
     color: black;
 }
 
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
+
+.show-menu .sidebar{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link{
+    font-family: var(--font-action);    
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover{
+    color: #6a3093;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+.social-media i{
+    background-color: #6a3093;
+    color: rgb(255, 255, 255);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20%;
+    transition: background-color 1s;
+}
+
+.social-media i:hover{
+    background-color: #a044ff;
+}
